[package]
name = "MobileHeroLauncher"
version = "1.1.0"
description = "MobileHero Windows Launcher - Low-latency controller server"
authors = ["MobileHero"]
edition = "2021"

[lib]
name = "mobileherolauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket server
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Keyboard simulation
enigo = "0.2"

# Utilities
once_cell = "1.19"
local-ip-address = "0.6"
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
